Dokumentation: allgemeine Ueberarbeitung

--- a/documentation/first.tex
+++ b/documentation/first.tex
@@ -135,7 +135,7 @@ Sobald die Registrierung in Taiga.io erfolgt ist gelangt man auf das allgemeine 
 \end{center}
 \end{figure}
 
-"Uber das Men"u "`MANAGE PROJECTS"' ist es m"oglich, alle Projekte zu verwalten und neue zu erstellen. Zur kostenlosen Nutzung ist die Erstellung eines privaten Projekts mit maximal vier Usern m"oglich oder beliebig viele "offentliche Projekte. Sobald das Projekt erstellt ist, können im Admin-Menü User hinzugefügt und die entsprechenden Rollen im Scrum-Vorgehensmodell zugewiesen werden.
+"Uber das Men"u "`MANAGE PROJECTS"' ist es m"oglich, alle Projekte zu verwalten und neue zu erstellen. Zur kostenlosen Nutzung ist die Erstellung eines privaten Projekts mit maximal vier Usern m"oglich oder beliebig viele "offentliche Projekte. Sobald das Projekt erstellt ist, k"onnen im Admin-Men"u User hinzugef"ugt und die entsprechenden Rollen im Scrum-Vorgehensmodell zugewiesen werden.
 
 \begin{figure} [H]
 \begin{center}
@@ -147,11 +147,11 @@ Sobald die Registrierung in Taiga.io erfolgt ist gelangt man auf das allgemeine 
 \end{center}
 \end{figure}
 
-Wir haben uns entschieden, dass alle Projektbeteiligten die Rolle Product Owner zugewiesen bekommen, da eine strikte Durchführung von Scrum nicht möglich war.
+Wir haben uns entschieden, dass alle Projektbeteiligten die Rolle Product Owner zugewiesen bekommen, da eine strikte Durchf"uhrung von Scrum nicht möglich war.
 
 \subsection{Integration HipChat}
 
-Um eine schnelle Kommunikation innerhalb des Projekts entschieden wir uns für eine Chat-Lösung die einerseits als Windows-Applikation und Smartphone-App verfügbar ist. F"ur die Durchf"uhrung des Projektes nutzten wir HipChat von Altlassian. Die Integration in Taiga.io funktioniert mit Hilfe eines Webhooks, der mit HipChat erzeugt wird und in Taiga.io integriert wird. Somit wird "uber s"amtliche Aktiviat"aten im HipChat benachrichtigt.
+Um eine schnelle Kommunikation innerhalb des Projekts entschieden wir uns für eine Chat-L"osung die einerseits als Windows-Applikation und Smartphone-App verfügbar ist. F"ur die Durchf"uhrung des Projektes nutzten wir HipChat von Altlassian. Die Integration in Taiga.io funktioniert mit Hilfe eines Webhooks, der mit HipChat erzeugt wird und in Taiga.io integriert wird. Somit wird "uber s"amtliche Aktiviat"aten im HipChat benachrichtigt.
 
 \begin{figure} [H]
 \begin{center}
@@ -227,7 +227,7 @@ Wochen, dadurch soll gew"ahrleistet werden, dass der Sprint mit allen Vorgehensw
 
 \section{Produktanforderungen}
 
-\subsection{funktionale Anforderungen}
+\subsection{Funktionale Anforderungen}
 
 \begin{table}[H]
 
@@ -676,7 +676,7 @@ Packages sind relativ klein und meistens nur f"ur einen bestimmten Zweck gedacht
 
 Die Packages und Module werden "uber die offizielle npm Seite www.npmjs.com/ zum Download angeboten. Sie werden "ublicherweise "uber den Git-Bash Konsolenbefehl npm install [...] installiert. Sie werden dann als Komponenten in die Applikation eingef"ugt und in dem Projekt-Verzeichnis \textbf{nodemodules} abgelegt.\\
 
-Mittels des Package-Managers lassen sich die f"ur das eigene Programm verwendeten Packages leicht verwalten und updaten. \\
+Mittels des Package-Managers lassen sich die f"ur das eigene Programm verwendeten Packages leicht verwalten und auch updaten. \\
 
 \textbf{F"ur die Webapplikation Appcimo werden folgende npm Packages installiert.} \\
 
@@ -754,7 +754,7 @@ Das \textbf{Repository} enth"alt den gesamten Code des Projekts, zuz"uglich der 
 "anderungen an dem Programm-Code werden von den Projektmitgliedern commitet und gepusht, so dass alle Entwickler dauerhaft Zugriff auf die aktuellste Programm-Version haben. \\
 
 Durch Kommentare bei jedem Commit, kennen alle Entwickler den aktuellen Stand und die Gr"unde des Push’s.  \\
-Bei Push-"uberschneidungen werden die Branches gemerged, so dass alle "anderungen und Features im neuen Versionsstand enthalten sind. \\
+Bei Push-""berschneidungen werden die Branches gemerged, so dass alle "Anderungen und Features im neuen Versionsstand enthalten sind. \\
 
 
 \subsection{CircleCI}
@@ -782,7 +782,7 @@ Der Software-Build kann "uber ein modernes UI gesteuert und beobachtet werden. \
 \end{center}
 \end{figure}
 
-Da der Software-Build inklusive aller Tests logisch ausgef"uhrt wird, kann auf das Konsolen-Reporting der Testf"alle zugegriffen werden. \\
+Da der Software-Build inklusive aller Tests logisch ausgef"uhrt wird, kann auf das Konsolen-Reporting der Testf"alle innerhalb der CircleCI UI zugegriffen werden. \\
 
 
 \begin{figure} [H]
@@ -796,7 +796,7 @@ Da der Software-Build inklusive aller Tests logisch ausgef"uhrt wird, kann auf d
 
 \textbf{AWS S3} \\
 Ein weiteres Feature von CircleCI ist die Koppelung des CircleCI-Accounts mit einem Amazon AWS Account. \\
-"uber eine Schnittstelle zu Amazons Web Services ist CircleCI in der Lage, nach erfolgreichem Build, die Applikation auf einem AWS Server zu hosten.\\
+"Uber eine Schnittstelle zu Amazons Web Services ist CircleCI in der Lage, nach erfolgreichem Build, die Applikation auf einem AWS Server zu hosten.\\
 
 \begin{figure} [H]
 \begin{center}
@@ -834,7 +834,7 @@ Ein weiteres Feature von CircleCI ist die Koppelung des CircleCI-Accounts mit ei
 
 \section{Ausblick}
 
-\chapter{Anhänge}
+\chapter{Anh"ange}
 
 \section{Glossar}
 
