Dokumentation: User Stories

--- a/documentation/first.tex
+++ b/documentation/first.tex
@@ -4,6 +4,7 @@
 \usepackage{float}
 \restylefloat{figure}
 \usepackage{graphicx} 
+\parindent0pt
 
 
 \usepackage[margin=25mm,right=25mm, left=25mm]{geometry}
@@ -119,7 +120,7 @@ Product Backlog Refinement: Im Projektteam wird untersucht, inwieweit der im Pro
 
 F"ur das Projektmanagement ist es wichtig eine geeignete Projektmanagementsoftware zu finden, die sich an die Bedürfnisse
 des Softwareprojektes anpassen lässt. Nach Recherchen und Austausch zwischen Kommolitonen und Arbeitskollegen wurde uns Taiga.io empfohlen. Taiga.io ist eine webbasierte Projektmanagement-Software mit der eine Projektdurchführung mit Scrum
-ermöglicht. Integration mit Github ist ebenso möglich, wie die Einrichtung von Plugins, z.B. Chat-Programmen, wie HipChat und Slack.
+erm"oglicht. Integration mit Github ist ebenso möglich, wie die Einrichtung von Plugins, z.B. Chat-Programmen, wie HipChat und Slack.
 
 \subsection{Einrichtung des Projektteams}
 
@@ -344,6 +345,13 @@ NFU02 &	Das System muss mit einem Entwicklungs-Framework umgesetzt werden.\\
 NFU03 &	Das System soll als Single-Page Anwendung umgesetzt werden.\\
 
 \hline
+NFU04 &	Das System soll gestestet werden.\\
+
+\hline
+NFU05 &	Das System soll über ein Deployment verf"ugen.\\
+
+\hline
+NFU06 &	F"ur Das System soll Continious Integration implementiert werden.\\
 
 \end{tabular}
 
@@ -370,6 +378,8 @@ Nr. &	Beschreibung\\
 
 \hline
 PRJ01 &	Für die Umsetzung des Systems soll ein modernes Entwicklungs-Framework für die Softwareerstellung genutzt werden.\\
+
+\hline
 PRJ02 &	Es muss eine Projektmanagementsoftware, für die mit der Softwareerstellung einhergehende Projektarbeit, genutzt werden.\\
 
 \hline
@@ -565,6 +575,71 @@ Task \#27 & Aufklappfunktion f"ur Ergebnisleisten implementieren\\
 
 \hline
 Task \#28 & Erstellen von Unterabschnitten zu den jeweiligen Ergebnisleisten\\
+
+\hline
+\end{tabular}
+
+\end{table}
+
+\begin{table}[H]
+
+\caption{Sprint 5}
+
+\ \\
+
+\par
+
+\label{tab:Sprint 5}
+
+\centering
+
+\begin{tabular}{|p{2.5cm} p{12cm}| ll}
+
+\hline
+\multicolumn{2}{|l|}{US08 - Programmcode-Refactoring} \\
+
+\hline
+Task \#34 & Komponenten umstrukturieren\\
+
+\hline
+Task \#35 & Methoden umschreiben, damit diese testbar sind\\
+
+\hline
+Task \#36 & Konfiguration der Testumgebung\\
+
+\hline
+\end{tabular}
+
+\end{table}
+
+\begin{table}[H]
+
+\caption{Sprint 6}
+
+\ \\
+
+\par
+
+\label{tab:Sprint 6}
+
+\centering
+
+\begin{tabular}{|p{2.5cm} p{12cm}| ll}
+
+\hline
+\multicolumn{2}{|l|}{US09 - CI, Tests, Deploy, Dokumentation} \\
+
+\hline
+Task \#38 & Continious Integration konfigurieren (CircleCI)\\
+
+\hline
+Task \#39 & Unit Tests schreiben\\
+
+\hline
+Task \#40 & Projektdokumentation schreiben\\
+
+\hline
+Task \#41 & Deployment AppCiMo nach AWS (Amazon Web Service)\\
 
 \hline
 \end{tabular}
