--- a/documentation/first.tex
+++ b/documentation/first.tex
@@ -77,7 +77,7 @@ Dabei werden vor allem folgende Vorz"uge von Scrum in dem Projekt genutzt:
 \item{wenige, leicht verst"andliche Regeln}
 \item{Kurze Kommunikationswege}
 \item{Hohe Flexibilit"at/Agilit"at durch adaptives Planen}
-\item{Hohe Effektivität durch Selbstorganisation}
+\item{Hohe Effektivit"at durch Selbstorganisation}
 \item{Hohe Transparenz durch regelm"a"sige Meetings und Backlogs}
 \item{Zeitnahe Realisation neuer Produkteigenschaften bzw. Inkremente}
 \item{Kontinuierlicher Verbesserungsprozess}
@@ -152,7 +152,7 @@ Wir haben uns entschieden, dass alle Projektbeteiligten die Rolle Product Owner 
 
 \subsection{Integration HipChat}
 
-Um eine schnelle Kommunikation innerhalb des Projekts entschieden wir uns für eine Chat-L"osung die einerseits als Windows-Applikation und Smartphone-App verfügbar ist. F"ur die Durchf"uhrung des Projektes nutzten wir HipChat von Altlassian. Die Integration in Taiga.io funktioniert mit Hilfe eines Webhooks, der mit HipChat erzeugt wird und in Taiga.io integriert wird. Somit wird "uber s"amtliche Aktiviat"aten im HipChat benachrichtigt.
+Um eine schnelle Kommunikation innerhalb des Projekts entschieden wir uns f"ur eine Chat-L"osung die sowohl als Windows-Applikation als auch als Smartphone-App verfügbar ist. F"ur die Durchf"uhrung des Projektes nutzten wir HipChat von Altlassian. Die Integration in Taiga.io funktioniert mit Hilfe eines Webhooks, der mit HipChat erzeugt wird und in Taiga.io integriert wird. Somit wird "uber s"amtliche Aktiviat"aten im HipChat benachrichtigt.
 
 \begin{figure} [H]
 \begin{center}
@@ -649,7 +649,7 @@ Task \#41 & Deployment AppCiMo nach AWS (Amazon Web Service)\\
 \section{Konfiguration und Einrichtung zur Softwareentwicklung}
 
 \subsection{Entwicklungsumgebung}
-Webbasierte Javaanwendungen lassen sich mit Hilfe einer Vielzahl von Entwicklungsumgebungen (IDEs) programmieren.
+Webbasierte Javascript-Anwendungen lassen sich mit Hilfe einer Vielzahl von Entwicklungsumgebungen (IDEs) programmieren.
 Das Entwicklungsteam hat sich, nach Abw"agung der jeweiligen Vor- und Nachteile, f"ur die Verwendung von zwei unterschiedlichen IDEs entschlossen.\\
 
 Eine dieser IDEs ist \textbf{WEBSTORM}, das kostenlos von \textbf{JETBRAINS} angeboten wird. \\
@@ -708,7 +708,7 @@ Vue.js verbindet die sichtbaren Elemente und die Datensicht eines Systems selbst
 Das Herzst"uck der Vue.js-Bibliothek sind jedoch die Komponenten, mit denen sich komplexe Strukturen abbilden lassen. Wie bei anderen Systemen k"onnen sie weitere Komponenten enthalten.\\
 Die Parent-Komponenten bestimmen dabei die Eigenschaften der Child-Komponenten. Die Kommunikation zwischen den Komponenten untereinander wird mit einem Event-System realisiert.\\
 
-Au"serdem bietet Vue.js M"oglichkeiten beim Einf“ugen von neuen Elementen, diese mit animierten Effekten oder "Uberg"angen zu versch"onern.\\
+Au"serdem bietet Vue.js M"oglichkeiten beim Ein"ugen von neuen Elementen, diese mit animierten Effekten oder "Uberg"angen zu versch"onern.\\
 
 Bei der Erstellung der Webapplikation Appcimo sorgen vor allem \textbf{Direktiven} f"ur "ubersichtliche und leicht-verst"andliche Code-Abschnitte. Damit lassen sich zum Beispiel Schleifen durch ein Array iterieren, HTML-Knoten optional einbinden (v-if) und ausblenden (v-show), Klickevents abfangen (v-on) und Attribute an Variablen binden (v-bind).
 
@@ -749,7 +749,7 @@ Der npm Package Manager ist eine Platform f"ur Javascript-Entwickler, die Ihren 
 
 Packages sind relativ klein und meistens nur f"ur einen bestimmten Zweck gedacht. Die Idee hier ist, mittels mehrerer kleiner  Packages ma"sgeschneiderte L"osungen f"ur die eigene Applikation zu konstruieren. \\
 
-Die Packages und Module werden "uber die offizielle npm Seite www.npmjs.com/ zum Download angeboten. Sie werden "ublicherweise "uber den Git-Bash Konsolenbefehl npm install [...] installiert. Sie werden dann als Komponenten in die Applikation eingef"ugt und in dem Projekt-Verzeichnis \textbf{nodemodules} abgelegt.\\
+Die Packages und Module werden "uber die offizielle npm Seite www.npmjs.com/ zum Download angeboten. Sie werden "ublicherweise "uber den Bash/Cmd Konsolenbefehl npm install [...] installiert. Sie werden dann als Komponenten in die Applikation eingef"ugt und in dem Projekt-Verzeichnis \textbf{node_modules} abgelegt.\\
 
 Mittels des Package-Managers lassen sich die f"ur das eigene Programm verwendeten Packages leicht verwalten und auch updaten. \\
 
@@ -828,8 +828,8 @@ https://github.com/PattnOne \\
 Das \textbf{Repository} enth"alt den gesamten Code des Projekts, zuz"uglich der Tests und der Dokumentation und wird an einem Master Branch erstellt. \\
 "anderungen an dem Programm-Code werden von den Projektmitgliedern commitet und gepusht, so dass alle Entwickler dauerhaft Zugriff auf die aktuellste Programm-Version haben. \\
 
-Durch Kommentare bei jedem Commit, kennen alle Entwickler den aktuellen Stand und die Gr"unde des Push’s.  \\
-Bei Push-""berschneidungen werden die Branches gemerged, so dass alle "Anderungen und Features im neuen Versionsstand enthalten sind. \\
+Durch Kommentare bei jedem Commit, kennen alle Entwickler den aktuellen Stand und die Gr"unde des Pushs.  \\
+Bei Push-"Uberschneidungen werden die Branches gemerged, so dass alle "Anderungen und Features im neuen Versionsstand enthalten sind. \\
 
 
 \subsection{CircleCI}
@@ -871,7 +871,7 @@ Da der Software-Build inklusive aller Tests logisch ausgef"uhrt wird, kann auf d
 
 \textbf{AWS S3} \\
 Ein weiteres Feature von CircleCI ist die Koppelung des CircleCI-Accounts mit einem Amazon AWS Account. \\
-"Uber eine Schnittstelle zu Amazons Web Services ist CircleCI in der Lage, nach erfolgreichem Build, die Applikation auf einem AWS Server zu hosten.\\
+"Uber eine Schnittstelle zu Amazons Web Services ist CircleCI in der Lage, nach erfolgreichem Test, die Applikation oder den Build der Applikation zu einem Amazon AWS S3 Speicherort hochzuladen (deployen).\\
 
 \begin{figure} [H]
 \begin{center}
